--- a/src/components/Backlog/index.css
+++ b/src/components/Backlog/index.css
@@ -1,8 +1,8 @@
 .task-list-container {
-    max-width: 60%;
     margin-top: 5%;
     box-shadow: 0px 10px 15px rgba(0, 0, 0, 0.2);
     background-color: #181818;
+    width: 60%;
 }
 
 .task-list {
