--- a/src/components/Board/Tasks/index.css
+++ b/src/components/Board/Tasks/index.css
@@ -1,12 +1,16 @@
-.task-container{
+.task-container {
+    border: 1px solid rgba(255, 255, 255, 0.1); 
+    box-shadow: 0 0 10px rgba(255, 255, 255, 0.1);
     text-align: left;
-    margin: 5%;
-    border-radius: 10px;
-    border: white solid 1px;
+    border-radius: 8px; 
+    padding: 8px;
+    margin-bottom: 10px;
+    color: #fff;
 }
 
 .task-container p{
     margin: 5px;
+    font-size: smaller;
 }
 
 .owner{
