--- a/src/components/Board/index.css
+++ b/src/components/Board/index.css
@@ -1,3 +1,9 @@
-.tasks-section{
-    width: 20%;
+@media only screen and (min-width: 768px) {
+    .tasks-section{
+        width: 35%;
+    }
+}
+
+.tasks-section h3{
+    font-size: large;
 }
