--- a/src/components/Backlog/CreateIssue/index.css
+++ b/src/components/Backlog/CreateIssue/index.css
@@ -1,16 +1,19 @@
 .container-create-task{
     background-color: rgba(0, 0, 0, 0.5);
-    position: absolute;
-    top: 0;
-    left: 0;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     width: 100%;
     height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
+    z-index: 1000;
 }
   
 .create-task{
+    background-color: #181818;
     padding: 20px;
     border-radius: 5px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
@@ -34,6 +37,7 @@
     width: 100%;
     border-radius: 4px;
     border: solid 1px gray;
+    background-color: transparent;
 }
 
 .container-create-button {
@@ -52,4 +56,16 @@
 
 .container-create-button button:hover {
     background-color: #0056b3;
+}
+
+@media (max-width: 1000px){
+    .create-task{
+        width: 60%;
+    }
+}
+
+@media (max-width: 767px){
+    .create-task{
+        width: 100%;
+    }
 }
