--- a/src/components/Backlog/Issue/IssueInfo/index.css
+++ b/src/components/Backlog/Issue/IssueInfo/index.css
@@ -1,8 +1,9 @@
 .container-issue-info{
     background-color: rgba(0, 0, 0, 0.5);
-    position: absolute;
-    top: 0;
-    left: 0;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     width: 100%;
     height: 100%;
     display: flex;
@@ -11,6 +12,7 @@
 }
   
 .issue-info{
+    background-color: #181818;
     padding: 20px;
     border-radius: 5px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
@@ -31,10 +33,11 @@ h5{
 
 input,
 textarea {
+  background-color: transparent;
   width: 100%;
   padding: 8px;
-  margin-top: 5px;
-  margin-bottom: 10px;
+  margin-top: 10px !important;
+  margin-bottom: 10px !important;
   box-sizing: border-box;
   border: 1px solid #ccc;
   border-radius: 4px;
@@ -58,4 +61,17 @@ textarea {
 }
 .cancel{
     background-color: rgb(34, 34, 34);
+}
+
+@media (max-width: 1000px){
+    .issue-info{
+        width: 60%;
+    }
+}
+
+@media (max-width: 767px){
+    .issue-info{
+        height: 100%;
+        width: 100%;
+    }
 }
