--- a/src/components/SignUp/index.css
+++ b/src/components/SignUp/index.css
@@ -3,7 +3,8 @@
     border: 1px solid #181818; 
     border-radius: 8px; 
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); 
-    padding: 20px; 
+    padding: 20px;
+    width: 400px;
 }
 
 .input-signup{
