--- a/src/components/Navbar/index.css
+++ b/src/components/Navbar/index.css
@@ -11,9 +11,8 @@
   background-color: #272525; 
   border: 2px solid #272525; 
   border-radius: 5px;
-  position: absolute;
+  margin-left: 40%;
   margin-right: 20px;
-  right: 0;
   transition: background-color 0.3s ease, color 0.3s ease, border 0.3s ease; 
 
   &:hover {
