--- a/src/components/Navbar/CreateProject/index.css
+++ b/src/components/Navbar/CreateProject/index.css
@@ -13,11 +13,11 @@
   
 .create-project{
     background-color: #181818;
-    padding: 20px;
+    padding: 50px;
     border-radius: 5px;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+    box-shadow: 0px 0px 10px rgba(179, 179, 179, 0.2);
     position: relative;
-    width: 40%;
+    width: 35%;
 }
 
 .close-modal{
@@ -46,7 +46,7 @@
     margin-top: 20px;
 }
 .container-create-button button {
-    background-color: #007BFF;
+    background-color: rgba(179, 179, 179, 0.2);
     color: #fff;
     border: none;
     padding: 10px 20px;
@@ -55,7 +55,7 @@
 }
 
 .container-create-button button:hover {
-    background-color: #0056b3;
+    background-color: rgba(238, 238, 238, 0.2);
 }
 
 @media (max-width: 1000px){
