--- a/src/components/Navbar/SettingsMenu/index.css
+++ b/src/components/Navbar/SettingsMenu/index.css
@@ -1,26 +1,27 @@
 
-  .user-icon-active{
+.settings-icon-active{
     border-radius: 50px;
     box-shadow: 0 0 10px 5px rgba(255, 255, 255, 0.2);
-  }
+}
   
-  .user-icon:hover{
+.settings-icon:hover{
     border-radius: 50px;
     box-shadow: 0 0 10px 5px rgba(255, 255, 255, 0.2);
-  }
+}
   
-  .user-menu {
+.settings-menu {
     position: absolute;
     top: 40px;
     right: 0;
+    margin-right: 50px;
     background-color: #181818;
     width: 300px;
     box-shadow: var(--ds-shadow-overlay, 0 4px 8px -2px rgba(84, 84, 85, 0.25), 0 0 1px rgba(67, 67, 68, 0.31));
     border-radius: 8px;
     z-index: 1000;
-  }
+}
   
-  .user-menu span {
+.settings-menu span {
     display: block;
     cursor: pointer;
     font-size: 15px;
@@ -28,32 +29,20 @@
     height: 40px;
     display: flex;
     align-items: center;
-  }
+}
   
-  .user-menu span:hover{
+.settings-menu span:hover{
     background-color: #2c2c2c;
-  }
+}
   
-  .container-user{
-    padding: 8px;
+.container-settings{
     align-items: center;
-    height: 35px;
-    margin-top: 20px;
     cursor: default;
-  }
-  .name{
-    font-size: 15px;
-    font-weight: bold;
-  }
+}
+
   
-  .email{
-    font-size: 12px;
-    margin-left: 20px;
-    margin-bottom: 17px;
-  }
-  
-  @media only screen and (max-width: 768px) {
-    .user-menu-container{
+@media only screen and (max-width: 768px) {
+    .settings-menu-container{
       margin-right: 70px;
     }
-  }
+}
